Filling in a score with hotkeys automatically jumps to next question. Set form autocompletion to 'off' to prevent firefox input bug. Enabled markdown for descriptions.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -168,7 +168,6 @@ body {
 
           .option {
             @include column(18, true); 
-            
             .radiocheckwrapper { @include column(1); }
             .labelwrapper { 
               @include column(17, true); 
@@ -194,24 +193,35 @@ body {
         }
 
         &.scale {
-          // beware, here be holycoding
-          // not sure why i'm including options1, why the frak would you have only one option?
-          @for $n from 1 to 19 {
-            .fields.options#{$n}  table { @include column( $n, true); @include append(18-$n); }
-          }
-
-          &.horizontal {
+            // beware, here be holycoding
+            // not sure why i'm including options1, why the frak would you have only one option?
+            @for $n from 1 to 19 {
+                .options#{$n}  table { @include column( $n, true); @include append(18-$n); }
+            }
+            
+            &.horizontal {
             // we need to reset this to be table cells
-            .description { float: none; display: table-cell; }
-          }
-
-          .option, .description { 
-            @include span(2);
-            border: 0;
-            text-align: center;
-          }
-          
-          .option.last, .description.last { @include last; }
+                .description { float: none; display: table-cell; }
+            }
+            
+            .option, .description { 
+                &.optionwidth1{width:20%}
+                &.optionwidth2{width:20%}
+                &.optionwidth3{width:20%}
+                &.optionwidth4{width:20%}
+                &.optionwidth5{width:20%}
+                &.optionwidth6{width:(100%/6)}
+                &.optionwidth7{width:(100%/7)}
+                &.optionwidth8{width:(100%/8)}
+                &.optionwidth9{width:(100%/9)}
+                &.optionwidth10{width:(100%/10)}
+                &.optionwidth11{width:(100%/11)}
+                &.optionwidth12{width:(100%/12)}
+                border: 0;
+                text-align: center;
+            }
+            
+            .option.last, .description.last { @include last; }
         }
       }
     }
@@ -279,7 +289,7 @@ body {
         &.optionwidth10{width:(100%/10)}
         &.optionwidth11{width:(100%/11)}
         &.optionwidth12{width:(100%/12)}                
-    }         
+    }
       .item { 
         @include column(24, true);
 
@@ -358,16 +368,6 @@ body {
                 .fields.options17 table { @include column(17, true); @include append( 1); }
                 .fields.options18 table { @include column(18, true);                      }
                 // more than 18 options is future work
-                //double wide
-                .fields.options1.doublewide  table { @include column( 2, true); @include append(16); }
-                .fields.options2.doublewide  table { @include column( 4, true); @include append(14); }
-                .fields.options3.doublewide  table { @include column( 6, true); @include append(12); }
-                .fields.options4.doublewide  table { @include column( 8, true); @include append(10); }
-                .fields.options5.doublewide  table { @include column( 10, true); @include append(8); }
-                .fields.options6.doublewide  table { @include column( 12, true); @include append(6); }
-                .fields.options7.doublewide  table { @include column( 14, true); @include append(4); }
-                .fields.options8.doublewide  table { @include column( 16, true); @include append(2); }
-                .fields.options9.doublewide  table { @include column( 18, true);}
             
                 &.horizontal {
                     // we need to reset this to be table cells
